# design_pattern

./: CMakeLists.txt  main.cpp
abstract_factory/: AbstractFactory.cpp  AbstractFactory.h  AbstractProduct.cpp  AbstractProduct.h
adaptor/: Adaptee.cpp  Adaptee.h  Adaptor.cpp  Adaptor.h  Target.cpp  Target.h
bridge/: Abstraction.cpp  Abstraction.h  AbstractionImp.cpp  AbstractionImp.h  LinuxAbstractionImp.cpp  LinuxAbstractionImp.h  WindowsAbstractionImp.cpp  WindowsAbstractionImp.h
command/: Command.cpp  Command.h  Invoker.cpp  Invoker.h  Reciever.cpp  Reciever.h
composite/: Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h
decorate/: Decorate.cpp  Decorate.h
facade/: Facade.cpp  Facade.h
factory/: Factory.cpp  Factory.h  Product.cpp  Product.h
flyweight/: Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h
iterator/: Aggregate.cpp  Aggregate.h  Iterator.cpp  Iterator.h
memento/: Memento.cpp  Memento.h
mycurl/: HttpIml.h  HttpImpl.cpp
observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
prototype/: Prototype.cpp  Prototype.h
proxy/: Proxy.cpp  Proxy.h
singleton/: Singleton.cpp  Singleton.h
state/: State.cpp  State.h  StateContext.cpp  StateContext.h
strategy/: Context.cpp  Context.h  Strategy.cpp  Strategy.h
template/: Template.cpp  Template.h
